// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvailableResourceListingItem /> should render correctly 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center justify-center sm:justify-start"
        >
          <div
            className=""
          />
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when adding 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center justify-center sm:justify-start"
        >
          <div
            className=""
          />
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          disabled={true}
          onClick={[Function]}
        >
          <div>
            <div
              className="LoadingSpinner"
              data-testid="LoadingSpinner"
            >
              <svg
                fill="none"
                height={20}
                viewBox="0 0 100 100"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M95 50C95 59.6293 91.9111 69.0047 86.1874 76.7483C80.4636 84.4919 72.4069 90.1952 63.2012 93.0201C53.9956 95.845 44.1265 95.6424 35.0445 92.4421C25.9625 89.2419 18.1466 83.2127 12.7454 75.2408C7.34427 67.2689 4.64275 57.7746 5.03791 48.1534C5.43306 38.5321 8.90405 29.2914 14.9407 21.7892C20.9774 14.287 29.2615 8.91914 38.5753 6.47442C47.8891 4.0297 57.7416 4.6371 66.6846 8.20736"
                  stroke="white"
                  strokeWidth="10"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when can not add resource 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center justify-center sm:justify-start"
        >
          <div
            className=""
          />
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          disabled={true}
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when resource already added 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center justify-center sm:justify-start"
        >
          <div
            className="line-through"
          />
        </div>
        <div
          className="error-text italic text-xs"
        >
          Already added
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          disabled={true}
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when resource has add error 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center justify-center sm:justify-start"
        >
          <div
            className=""
          />
        </div>
        <div
          className="error-text text-xs"
        >
          Failed to add topic resource.
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AvailableResourceListingItem /> should render correctly when resource verified 1`] = `
<div
  className="AvailableResourceListingItem"
  data-testid="AvailableResourceListingItem"
>
  <div
    className="ListingItem"
    data-testid="ListingItem"
  >
    <div
      className="text-center sm:text-left sm:flex sm:justify-between sm:items-center"
    >
      <div>
        <div
          className="flex items-center justify-center sm:justify-start"
        >
          <div
            className=""
          />
          <div
            className="ml-2"
          >
            <div
              className="VerifiedIcon"
              data-testid="VerifiedIcon"
            >
              <svg
                aria-describedby={null}
                aria-hidden={true}
                aria-label="verified"
                className="MuiSvgIcon-root"
                color="#6f99f2"
                focusable="false"
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                style={
                  Object {
                    "fontSize": 20,
                  }
                }
                title="Verified"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="mt-5 sm:mt-0 sm:ml-5"
      >
        <button
          className="btn btn-primary"
          data-testid="AddResourceButton"
          onClick={[Function]}
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            fill="white"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
